--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Learning HTML CSS</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div>
+      <a class="visit" href="Heading.html">Headings</a>
+      <a href="Paragraph.html">Paragraph</a>
+      <a href="list.html">List</a>
+      <a href="Image.html">Image</a>
+    </div>
+
+    <div>
+      <h1>My internship task 1</h1>
+      <h2>My internship task 1</h2>
+      <h3>My internship task 1</h3>
+      <h4>My internship task 1</h4>
+      <h5>My internship task 1</h5>
+      <h6>My internship task 1</h6>
+    </div>
+<div>
+      <img
+        src="https://cdn.britannica.com/29/150929-050-547070A1/lion-Kenya-Masai-Mara-National-Reserve.jpg"
+        alt="img"
+        height="330"
+        width="500"
+      />
+    </div>
+<div>
+      <ul>
+        <li>my order 1</li>
+        <li>my order 2</li>
+        <li>my order 3</li>
+      </ul>
+
+      <ol>
+        <li>my order 1</li>
+        <li>my order 2</li>
+        <li>my order 3</li>
+      </ol>
+<div>
+      <p>This is my first static webpage</p>
+      <p>This is my first static webpage</p>
+      <p>This paragraph contains an <strong>Inline Element</strong>.</p>
+      <p>This paragraph contains an <em>Inline Element</em>.</p>
+      <p>This paragraph contains an <span>Inline Element</span>.</p>
+    </div>
+  </body>
+</html>
 
